# msgi

./: .gitignore  .gitmodules  CMakeLists.txt  MSGI.sln  MSGI.vcxproj  MSGI_VS2010.sln  MSGI_VS2010.vcxproj  README.md  WinMain.cpp  appveyor.yml  dllmain.cpp
Source/: MSGI.props  MSGI.sln  MSGI.vcxproj
Source/DetoursLib/: DetoursLib.vcxproj  DetoursLib.vcxproj.filters
Source/GCLASM/: CMakeLists.txt  GCLASM.vcxproj  GCLASM.vcxproj.filters  GclAsm.cpp
Source/MgsDll/: CMakeLists.txt  MsgDll.vcxproj  MsgDll.vcxproj.filters  WinMain.cpp  dllmain.cpp
Source/MgsExe/: CMakeLists.txt  ImportRealGameSections.cpp  MgsExe.cpp  MgsExe.vcxproj  MgsExe.vcxproj.filters  function_ordering.txt
Source/MgsLib/: Actor.cpp  Actor.hpp  Actor_BoxKeri.cpp  Actor_BoxKeri.hpp  Actor_Debug.cpp  Actor_Debug.hpp  Actor_Delay.cpp  Actor_Delay.hpp  Actor_GameCamera.cpp  Actor_GameCamera.hpp  Actor_GameD.cpp  Actor_GameD.hpp  Actor_Loader.cpp  Actor_Loader.hpp  Actor_Movie.cpp  Actor_Movie.hpp  Actor_Rank.cpp  Actor_Rank.hpp  CMakeLists.txt  Control.cpp  Control.hpp  File.cpp  File.hpp  Font.cpp  Font.hpp  Fs.cpp  Fs.hpp  Imports.cpp  Imports.hpp  Input.cpp  Input.hpp  Kmd.cpp  Kmd.hpp  LibDG.cpp  LibDG.hpp  LibGV.cpp  LibGV.hpp  Map.cpp  Map.hpp  Masher.cpp  (+32 more)
Source/Tests/: ActorUT.cpp  CMakeLists.txt  Main.cpp  ResourceNameHashUT.cpp  ScriptUT.cpp  SystemUT.cpp  TaskUT.cpp  TestTask.cpp  Tests.vcxproj  Tests.vcxproj.filters  stdafx.h
Source/gmock/: gmock.vcxproj  gmock.vcxproj.filters
